--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ https://templatemo.com/tm-520-highway
 
     <nav>
         <div class="logo">
-            <a href="index.html">CANDY   <em>SH🍩P</em></a>
+            <a href="index.html">CANDY <em>SH🍩P</em></a>
         </div>
         
         <span></span>
@@ -41,8 +41,8 @@ https://templatemo.com/tm-520-highway
         <div class="video-overlay"></div>
         <div class="video-content">
             <div class="inner">
-              <h1>CANDY <em>SH🍩P</em></h1>
-              <p>🍬DULCES IMPORTADOS🍬</p>
+              <h1>CANDY   <em>SH🍩P</em></h1>
+              <p>DULCES IMPORTADOS</p>
               <p>🍭AMERICANOS Y ASIATICOS🍭</p>
                 <div class="scroll-icon">
                     <a class="scrollTo" data-scrollTo="portfolio" href="#"><img src="img/scroll-icon.png" alt=""></a>
