--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ https://templatemo.com/tm-520-highway
 
     <nav>
         <div class="logo">
-            <a href="index.html">CANDY <em>SH🍩P</em></a>
+            <a href="index.html">CANDY <em>SHOP</em></a>
         </div>
         
         <span></span>
