--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-520-highway
         <div class="video-overlay"></div>
         <div class="video-content">
             <div class="inner">
-              <h1>CANDY   <em>SH🍩P</em></h1>
+              <h1>CANDY <em>SHOP</em></h1>
               <p>DULCES IMPORTADOS</p>
               <p>🍭AMERICANOS Y ASIATICOS🍭</p>
                 <div class="scroll-icon">
